Updated to Jetty 10.0.0-alpha0. Updated module-info.java to be more transitive following the compiler suggestions.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>